@@ -138,39 +138,39 @@ cmdopt_add
 
   Options that set a variable `v' to a value `val':
 
-    cmdopt_add (optobj, "f|foo" &v; default=val);
+    cmdopt_add (optobj, "f|foo", &v; default=val);
     cmdline: pgm -f ...
     cmdline: pgm --foo ...
 
 
   Options that increment an integer variable `v':
 
-    cmdopt_add (optobj, "f|foo" &v; inc);
+    cmdopt_add (optobj, "f|foo", &v; inc);
     cmdline: pgm -f -f ...       % In these examples, v
     cmdline: pgm --foo --foo ... % gets incremented twice
 
 
   Options that bitwise-or an integer variable `v' with `FLAG':
 
-    cmdopt_add (optobj, "f|foo" &v; bor=FLAG);
+    cmdopt_add (optobj, "f|foo", &v; bor=FLAG);
     cmdline: pgm -f ...       % v = v | FLAG
     cmdline: pgm --foo ...    % v = v | FLAG
 
   Options that bitwise-and an integer variable `v' with `MASK':
 
-    cmdopt_add (optobj, "f|foo" &v; band=MASK);
+    cmdopt_add (optobj, "f|foo", &v; band=MASK);
     cmdline: pgm -f ...       % v = v & MASK;
     cmdline: pgm --foo ...    % v = v & MASK;
 
   The above two options may be combined:
 
-    cmdopt_add (optobj, "f|foo" &v; bor=FLAG1, band=~FLAG2);
+    cmdopt_add (optobj, "f|foo", &v; bor=FLAG1, band=~FLAG2);
     cmdline: pgm -f ...       % v &= ~FLAG2; v |= FLAG1;
 
 
   Options that require a value and set `v' to the value VAL.
 
-    cmdopt_add (optobj, "f|foo" &v; type="int");
+    cmdopt_add (optobj, "f|foo", &v; type="int");
     cmdline: pgm -f VAL ...
     cmdline: pgm -fVAL ...
     cmdline: pgm --foo VAL ...
@@ -179,7 +179,7 @@ cmdopt_add
 
   Options whose value is optional:
 
-    cmdopt_add (optobj, "f|foo" &v; type="string", optional=DLFT);
+    cmdopt_add (optobj, "f|foo", &v; type="string", optional=DLFT);
     cmdline: pgm -f ...            % set v to DFLT
     cmdline: pgm -fVAL ...         % set v to VAL
     cmdline: pgm --foo ...         % set v to DFLT
